# web-metrics

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  settings.yaml
.github/workflows/: build-app.yaml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: _helpers.tpl  configMap.yaml  deployment.yaml  service.yaml  serviceMonitor.yaml
src/: config_file.rs  lib.rs  main.rs  prometheus.rs  web_requests.rs  web_server.rs
