[package]
name = "web_metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
hyper = { version = "0.14", features = ["full"] }
prometheus = "0.13.4"
once_cell = "1.19.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.10.1"
openssl = { version = "0.10", features = ["vendored"] }
